; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_box.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_box.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { i32, %struct.TYPE_2__*, i64, i64 }
%struct.TYPE_2__ = type { i32 }
%struct.wlr_box = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @output_damage_box(%struct.sway_output* %0, %struct.wlr_box* %1) #0 {
  %3 = alloca %struct.sway_output*, align 8
  %4 = alloca %struct.wlr_box*, align 8
  %5 = alloca %struct.wlr_box, align 4
  store %struct.sway_output* %0, %struct.sway_output** %3, align 8
  store %struct.wlr_box* %1, %struct.wlr_box** %4, align 8
  %6 = load %struct.wlr_box*, %struct.wlr_box** %4, align 8
  %7 = call i32 @memcpy(%struct.wlr_box* %5, %struct.wlr_box* %6, i32 8)
  %8 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  %9 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %5, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = sub nsw i64 %13, %10
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %11, align 4
  %16 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  %17 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = sub nsw i64 %21, %18
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %19, align 4
  %24 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  %25 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %24, i32 0, i32 1
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @scale_box(%struct.wlr_box* %5, i32 %28)
  %30 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  %31 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @wlr_output_damage_add_box(i32 %32, %struct.wlr_box* %5)
  ret void
}

declare dso_local i32 @memcpy(%struct.wlr_box*, %struct.wlr_box*, i32) #1

declare dso_local i32 @scale_box(%struct.wlr_box*, i32) #1

declare dso_local i32 @wlr_output_damage_add_box(i32, %struct.wlr_box*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
